Fixed x-overflow with container padding

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,7 +3,6 @@
 .container {
   width: 100%;
   height: 100vh;
-  padding: 0 200px;
   display: flex;
   justify-items: center;
   align-items: center;
@@ -12,6 +11,7 @@
   .text {
     width: 40vw;
     min-width: 500px;
+    padding-left: 250px;
 
     h1 {
       @include fluid-type(3rem, 6.25rem);
